--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -34,6 +41,9 @@ body {
   min-height: 100vh;
   user-select: none;
   -webkit-user-select: none;
+  touch-action: none;
+  -webkit-overflow-scrolling: none;
+  overscroll-behavior: none;
 }
 
 #root {
